--- a/index.html
+++ b/index.html
@@ -1,10 +1,106 @@
-<!doctype html>
-<html lang="en">
+<! DOCTYPE html>
+<html>
 <head>
-     <meta charset="UTF-8">
-     <title>Document</title>
+<title>grassyplain</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="stylesheet.css" />
+<link rel="javascript" href="script.js"/>
+<script src="https://use.fontawesome.com/f4d1a8f1eb.js"></script>
+<link rel="stylesheet" href="documents/WEBSITE/font-awesome-4.6.3/css/font-awesome.min.css"/>
 </head>
-<body>
-     <p>Hello World!</p>
+<body class="loading">
+<div id="wrapper">
+<div id="bg"></div>
+<div id="overlay"></div>
+<div id="main">
+
+<!-- Header -->
+<header id="header" class="alt">
+<i class="fa fa-windows fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-apple fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-wordpress fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-laptop fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-android fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-headphones fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-gamepad fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-codepen fa-lrg fa-3x" aria-hidden="true"></i>
+<i class="fa fa-terminal fa-lrg fa-3x" aria-hidden="true"></i>
+
+<h1>NELSON TORRES</h1>
+<i class="fa fa-fire" aria-hidden="true"></i>
+<i class="fa fa-fire" aria-hidden="true"></i>
+<i class="fa fa-fire" aria-hidden="true"></i>
+<i class="fa fa-fire" aria-hidden="true"></i>
+<i class="fa fa-fire" aria-hidden="true"></i>
+<i class="fa fa-fire" aria-hidden="true"></i>
+<i class="fa fa-fire" aria-hidden="true"></i>
+<p>Front-End Web Developer &nbsp;&bull;&nbsp; Computer Operation Maintinence Programmer &nbsp;&bull;&nbsp; IT Specialist &nbsp;&bull;&nbsp; Web Designer</p>
+</header>
+
+<!-- Banner -->
+<!-- One -->
+
+<banner id="banner" class="alt">
+<nav>
+<i class="fa fa-quote-left fa-pull-left fa-border" aria-hidden="true"></i>
+<strong>"We hold our rifles in missing hands. We stand tall on missing legs. We stride forward on the bones of our fallen. Then, and only then, are we alive. This "Pain" is ours and no one else's. A secret weapon we wield, out of sight. We will be stronger than ever. For our peace... Still, It doesn't feel like this is over..." 
+<i class="fa fa-quote-right fa-pull-right fa-border" aria-hidden="true"></i>
+— Kazuhira Miller</strong>
+</nav>
+</banner>
+<br />
+<!-- Body -->
+<body id="body" class="alt">
+<nav>
+<i class="fa fa-diamond" aria-hidden="true"></i>
+<i class="fa fa-diamond" aria-hidden="true"></i>
+<i class="fa fa-diamond" aria-hidden="true"></i>
+<i class="fa fa-diamond" aria-hidden="true"></i>
+<i class="fa fa-diamond" aria-hidden="true"></i>
+<i class="fa fa-diamond" aria-hidden="true"></i>
+<i class="fa fa-diamond" aria-hidden="true"></i>
+<p>I am very familiar with programs like the Microsoft Office 365 Suite, BitTorrent, ROBLOX/ROBLOX Studio, Cloud9, CodeCademy, Google Apps Suite, Antivirus Software, Safari, Google Chrome, Firefox, Microsoft Edge, Parallels Desktop, Sketch, Sublime, Smultron, WordPress, Atom, GitHub, Video Game Emulation Software like Project 64, OpenEmu, Dolphin, and PCSXR.<br />
+<br />I have cumulated extensive coding knowledge of HTML/CSS, JavaScript, PHP, jQuery, Git, The Command Line, and the Terminal.<br />
+<br />Familiar with the art of Rooting (Android, CynogenMod, Flashing Roms) but is open to further teaching and training on said subject<br />
+<br />Gamer at Heart and is REALLY interested in potiential oppurtunities in Game Development and Game Programming<br />
+<br />I have a very wild and creative imagination and I am great at coming up with potiential ideas for many different things (Projects, Games, Apps, Books, Movies, Websites)<br />
+<br /></p>
 </body>
+</nav>
+<!-- Footer -->
+<footer id="footer">
+	<fa-ul class="icons">
+		<fa-li><a href="https://twitter.com/gamejerk147" class="fa fa-twitter"><span class="twitter"></span></a></li>
+		<fa-li><a href="https://reddit.com/deathlyn" class="fa fa-reddit-alien"><span class="reddit"></span></a></li>
+		<fa-li><a href="https://facebook.com/gamejerk147" class="fa fa-facebook"><span class="facebook"></span></a></li>
+		<fa-li><a href="https://instagram.com/nelnel147/" class="fa fa-instagram"><span class="instagram"></span></a></li>
+		<fa-li><a href="deathlyn.245@gmail.com" class="fa fa-envelope-o"><span class="email"></span></a></li>
+		<fa-li><a href="https://www.linkedin.com/in/deathlyn" class="fa fa-linkedin"><span class="linkedin"></span></a></li>
+		<fa-li><a href="https://ywebca.slack.com" class="fa fa-slack"><span class="slack"></span></a></li>
+		<fa-li><a href="https://www.github.com/DeathlyN" class="fa fa-github"><span class="github"></span></a></li>
+
+
+						</ul>
+						<ul class="copyright">
+							<li>&copy; 2016</li><li>DeathlyN</a></li>
+						</ul>
+					</footer>
+			</div>
+
+	<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+			<script src="https://use.fontawesome.com/f4d1a8f1eb.js"></script>
+		<script>
+			window.onload = function() { document.body.className = ''; };
+			window.ontouchmove = function() { return false; };
+			window.onorientationchange = function() { document.body.scrollTop = 0; };
+		</script>
+	</body>
 </html>
